  beep on your own PMs.
- Add a third argument $obj to objectRemoved() function (just like
  objectAdded() has), and moved the objectRemoved() calls to just before the
  object was deleted so that $obj still exists when it is called.
- %mon_control added to Globals.pm.
- The Wx map viewer's xpmmake() has been rewritten in C++ for speed.
  It is now more than 100 times faster.

Credits:
- jsteng: Pet detection fix.
- mondlicht: misc bug fixes.
- denni: previousDamage condition, teleportAuto_maxDmgInLock,
  teleportAuto_minAggressivesInLock.


==================
### 1.5.1 (beta)
==================

Bug fixes:
- Fix "undefined value as HASH" bug in the Wx item list control.
- Reset earned money when openshop.
- Fix crash when using "move" and "date" commands via PM/chat.
- partySkill target_timeouts are now saved when openkore uses the skill
  on the person, not when it tries to use it.
- The day parameter for autoBreakTime is no longer case sensitive.
- Fix a routing problem which causes Kore to walk back and forth.
- Various attackComboSlot bug fixes.
- "You are in Stunned state" message was verbosity 2 instead of 1.
- 'autostorage' command will now work even if storageAuto is set to 0.
- Sometimes openkore would stop auto-storing items covered by the 'all'
  setting in items_control.txt, necessitating a reload.
- Zeny earned is reset when you use "exp reset".
- "Inventory Item Removed" message was not being displayed when you drop
  (instead of fire) arrows.
- Your shop title and chatroom title will not longer than 36 characters.
- openkore was allowing more than 10 items to be added to the deal (bug #31)
  if you were adding more than one of the same type of equipment. The server
  would destroy these excess items! This is now fixed, except when you type a
  lot of "deal add" commands faster than the server responds.
- 'autosell' command will now work even if sellAuto is set to 0.
- Don't trigger sellAuto after storageAuto if sellAuto is 0.