@@ -28,6 +28,6 @@ CODE:
 	   If this number is increased, then that means new functions
 	   have been added. The library is still compatible with the
 	   previous interface. */
-	RETVAL = 0;
+	RETVAL = 1;
 OUTPUT:
 	RETVAL
